--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="parallax2"></div>
     <div class="ftex">
-       <p> Alkotásaim: <a href="https://horvathpeter.ml" target="_blank"> horvathpeter.ml</a></p>
+       <p> Alkotásaim: <a href="https://icreeper12.ml" target="_blank"> horvathpeter.ml</a></p>
     </div>
     
 </body>
