--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <center>Programozási nyelvek: JS,HTML,css</center>
     </div>
     <div class="ftex">
-        <center>Amiket még meg szeretnék tanulni: Electron.js,VUE</center>
+        <center>Amiket még meg szeretnék tanulni: express.js,Electron.js,VUE</center>
     </div>
     <div class="parallax2"></div>
     <div class="ftex">
