--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             </span>
         </div>
         <div class="container" alt="Dolgozok rajta" title="Dolgozok rajta">
-            <h1>Dolgozok rajta</h1>
+            <h1>Dolgozok rajta / kész</h1>
             <span>
                 <ul>
                     <li><a href="https://skyvillage.icr12.ml" target="_blank">SkyVillage</a>-n</li>
+                    <li><a href="https://icreeper12.ml/">Meg ezen a valamilyen oldalon</a></li>
                     <li><a href="https://github.com/ICreeper12/bot" target="_blank">DiscordBot</a>-om</li>
                     <li><a href="#" target="_blank">Ezen az oldalon</a></li>
                 </ul>
