--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h1>Most tanulom</h1>
             <span>
                 <ul>
-                    <li><a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank">c#</a></li>
-                    <li><a href="https://dotnet.microsoft.com/" target="_blank">.NET</a></li>
+                    <p>Most semmi új nyelvet,csak a meglévőket mégjobban.</p>
+                    
                 </ul>
             </span>
         </div>
