--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="style.css">
     <!-- -->
-    <title>yes</title>
+    <title>ICreeper12Dev</title>
 </head>
 
 <body>
