--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta property="og:url" content="https://icreeper.me" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="ICreeper12Dev" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/795588490188161027/813063353546965042/izecucc.pngs" />
+    <meta property="og:image" href="./crimson_backgroundless.png" />
+    <link rel="shortcut icon" href="./crimson_backgroundless.png" type="image/png" />
     <meta property="og:description" content="Ez a Dev oldalam, mert mindenkinek kell." />
     <meta property="og:locale" content="hu_HU" />
     <meta charset="UTF-8">
