--- a/dvd/index.html
+++ b/dvd/index.html
@@ -9,6 +9,7 @@
     <title>Pong</title>
 </head>
 <body>
+    <p class="currentClr" id="currentClr"> asdasd</p>
     <dir id="obj">
         Peti
     </dir>
