--- a/snake/index.html
+++ b/snake/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="display"> <button onclick="start()">START</button> Pontjaid: <p>0</p></div>
     
-    <canvas></canvas>
+    <canvas width="704px" height="504px"></canvas>
     
 </body>
 </html>
