--- a/snake/index.html
+++ b/snake/index.html
@@ -13,5 +13,6 @@
     
     <canvas width="704px" height="504px"></canvas>
     
+    <span>Irányítás <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> vagy <kbd>▲</kbd> <kbd>▼</kbd> <kbd>◄</kbd> <kbd>►</kbd> </span>
 </body>
 </html>
