--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <dir id="More" class="card">
             <h1>More</h1>
             <img src="./malom.gif" alt="Malom">
+            <a href="https://petidev.github.io/ICreeper12Dev/snake/">SNAKE</a>
+            <a href="https://petidev.github.io/ICreeper12Dev/dvd/">DVD</a>
         </dir>
         
     </main>
