--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="style.css">
     <!-- -->
-    <title>ICreeper12Dev</title>
+    <title>PetiDev</title>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
     </header>
     <main>
         <dir id="Home" class="card home">
-            <img class="profile-pic" src="./crimson_backgroundless.png" alt="Profilkép">
-            <h1>ICreeper12</h1>
+            <img class="profile-pic" src="./slash_crimson_backgroundless.png" alt="Profilkép">
+            <h1>PetiDev</h1>
             <span>
                 <h2>Kezdő szoftverfejlesztő</h2>
             </span>
