some update, the buggy menu is still amongus

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="hu">
+<!--2022. 03. 23.-->
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
-    <title></title>
+    <title>PetiDev</title>
 </head>
 
 <body>
@@ -30,13 +32,13 @@
     </menu>
     <div id="home" class="home">
 
-        <img src="./img/profile.png" alt="Profilkép">
+        <img src="./img/profile.svg" alt="Profilkép">
         <div>
             <h1>Peti<h1>Dev</h1>
             </h1>
             <h3>Kezdő szoftverfejlesztő és tesztelő</h3>
-            <a href="https://github.com/petidev" target="_blank"><img src="./img/github.png" alt="GitHub"></a>
-            <a href="https://discord.com/users/423093436313501696" target="_blank"><img src="./img/discord.png"
+            <a href="https://github.com/petidev" target="_blank"><img src="./img/github.svg" alt="GitHub"></a>
+            <a href="https://discord.com/users/423093436313501696" target="_blank"><img src="./img/discord.svg"
                     alt="Discord"></a>
         </div>
     </div>
@@ -87,7 +89,7 @@
         </dir>
     </div>
     <div id="customize">
-        
+
         <dir class="customize">
             <h1>Még dolgozok rajta</h1>
             <form class="hue">
