default value of slide

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <form class="hue">
                 <h2>HUE</h2>
                 <div>
-                    <input class="hueSlider" id="hueSlider" type="range" min="0" max="360"
+                    <input class="hueSlider" id="hueSlider" type="range" value="0" min="0" max="360"
                         oninput="hueDirect.value=hueSlider.value;hueChange(hueSlider.value)" />
                     <input class="hueDirect" id="hueDirect" type="number" value="0" min="0" max="360"
                         oninput="hueSlider.value=hueDirect.value;hueChange(hueDirect.value)" />
