--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="hu">
-<!--2022. 03. 23.-->
+<!--2022. 05. 14.-->
 
 <head>
+    <!--Meta-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://petidev.tk" />
+    <meta property="og:site_name" content="PetiDev" />
+    <meta property="og:title" content="PetiDev" />
+    <meta property="og:image" href="./img/logo-minimal.svg" />
+    <meta property="og:description" content="Ez a Dev oldalam, mert mindenkinek kell." />
+    <!--Link-->
     <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
+    <!--Script-->
     <script src="./script.js" defer></script>
+    <!---->
     <title>PetiDev</title>
 </head>
 
 <body>
     <menu>
         <a href="#home"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -3 30 30">
+            <title>Főoldal</title>
                 <path
                     d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
             </svg></a>
         <a href="#about"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -3 30 30">
+            <title>Rólam</title>
                 <path
                     d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
             </svg></a>
         <a href="#languages"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -3 30 30">
+            <title>Programozási nyelvek</title>
                 <path d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
             </svg></a>
         <a href="#customize"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -3 30 30">
+            <title>Személyre szabás</title>
                 <path
                     d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
             </svg></a>
