--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="PetiDev" />
     <meta property="og:image" href="./img/logo-minimal.svg" />
     <meta property="og:description" content="Ez a Dev oldalam, mert mindenkinek kell." />
+    <meta name="description" content="Ez a Dev oldalam, mert mindenkinek kell." />
     <!--Link-->
     <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
