some accessibility fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="PetiDev" />
     <meta property="og:image" href="./img/logo-minimal.svg" />
     <meta property="og:description" content="Ez a Dev oldalam, mert mindenkinek kell." />
-    <meta name="description" content="Ez a Dev oldalam, mert mindenkinek kell." />
+     <meta name="description" content="Ez a Dev oldalam, mert mindenkinek kell." />
     <!--Link-->
     <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
@@ -63,14 +63,17 @@
         </p>
         <p>Jelenlegileg középiskolában tanulok</p>
         <div>
-            <ul>
+            <section>
                 <h3>Munkáim</h3>
+            <ul>
+                
                 <li><a underline href="https://petidev.github.io/PetiDevSite/snake" target="mySite">Snake</a></li>
                 <li><a underline href="https://petidev.github.io/tictactoe" target="mySite">TicTacToe</a></li>
                 <li><a underline href="https://petidev.github.io/PetiDevSite/dvd" target="mySite">DVD</a></li>
                 <li><a underline href="https://petidev.github.io/horvathpeter" target="mySite">Valami nagyon régi</a>
                 </li>
             </ul>
+        </section>
         </div>
     </div>
     <div id="languages" class="languagesWrapper">
