--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <!--Script-->
-    <script src="./script.js" defer></script>
+    <script src="./js/script.js" defer></script>
+    <script src="./js/nameAnimation.js" defer></script>
     <!---->
     <title>PetiDev</title>
 </head>
@@ -48,9 +49,9 @@
 
         <img src="./img/profile.svg" alt="Profilkép">
         <div>
-            <h1>Peti<h1>Dev</h1>
+            <h1 id="name">Peti<h1 id="name2"></h1>
             </h1>
-            <h3>Kezdő szoftverfejlesztő és tesztelő</h3>
+            <h3>Tanuló szoftverfejlesztő és tesztelő</h3>
             <a href="https://github.com/petidev" target="_blank"><img src="./img/github.svg" alt="GitHub"></a>
             <a href="https://discord.com/users/423093436313501696" target="_blank"><img src="./img/discord.svg"
                     alt="Discord"></a>
@@ -122,6 +123,7 @@
                     megjavul.</sub>
             </form>
         </dir>
+        
     </div>
 </body>
 
