--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="hu">
+<!--2022. 08. 10.-->
 
 <head>
-
+<!--Meta-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--
     <meta property="og:url" content="https://petidev.tk" />
     <meta property="og:site_name" content="PetiDev" />
     <meta property="og:title" content="PetiDev" />
     <meta property="og:image" href="./img/logo-minimal.svg" />
     <meta property="og:description" content="Ez a Dev oldalam, mert mindenkinek kell." />
     <meta name="description" content="Ez a Dev oldalam, mert mindenkinek kell." />
--->
+
+<!---->
     <link rel="shortvut icon" href="./img/logo-minimal.svg" type="image/svg+xml">
+
+<!--CSS-->
     <link rel="stylesheet" href="./css/style.css">
 
+<!--JavaScript-->
     <script src="./js/script.js" defer></script>
     <script src="./js/nameAnimation.js" defer></script>
 
@@ -108,7 +112,7 @@
         </div>
     </dir>
     <dir id="customize">
-        <h1>Mégdolgozok rajta</h1>
+        <h1>Még dolgozok rajta</h1>
         <form class="hue">
             <h2>HUE</h2>
             <div>
