added pong site to links

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <li><a underline href="https://petidev.github.io/horvathpeter" target="_blank">Valami nagyon régi</a>
                 </li>
                 <li><a underline href="https://petidev.github.io/PetiDevSite/dvd" target="_blank">DVD</a></li>
+                <li><a underline href="https://petidev.github.io/pong/" target="_blank">Pong</a></li>
             </ul>
         </section>
     </dir>
