--- a/e45t3r3gg/index.html
+++ b/e45t3r3gg/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yes</title>
+
+    <script src="script.js" defer></script>
+    <style>
+        button{
+            width: 50vw;
+            height: 50vh;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+            background-color: greenyellow;
+        }
+        button:hover {
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-    <h3>You really thought??</h3>
+    <p id="p"></p>
+    <button id="b" onclick="clicked()">Click me</button>
 </body>
 </html>
