--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
             </svg></a>
     </nav>
-    <dir id="home">
+    <dir id="home" class="hidden">
         <div>
             <img src="./img/profile.svg" alt="Profilkép">
             <div>
@@ -65,7 +65,7 @@
         </div>
     </dir>
 
-    <dir id="about">
+    <dir id="about" class="hidden">
         <h1>Rólam</h1>
         <h3>Az első weboldal amin dolgoztam egy nyelvtan órára készült.
             A csapattársam azt mondta, hogy "Csináljunk egy weboldalt PPT helyett" és én azt mondtam "Miért ne?".</h3>
@@ -83,7 +83,7 @@
         </section>
     </dir>
 
-    <dir id="languages">
+    <dir id="languages" class="hidden">
         <h1>Programozási nyelvek</h1>
         <div id="languages-wrapper">
             <div>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </dir>
-    <dir id="customize">
+    <dir id="customize" class="hidden">
         <h1>Még dolgozok rajta</h1>
         <form class="hue">
             <h2>HUE</h2>
