--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </svg></a>
     </nav>
     <dir id="home" class="hidden">
-        <div>
+        <div >
             <img src="./img/profile.svg" alt="Profilkép">
             <div>
                 <h1 id="name">Peti <h1 id="name2"></h1>
@@ -69,7 +69,7 @@
         <h1>Rólam</h1>
         <h3>Az első weboldal amin dolgoztam egy nyelvtan órára készült.
             A csapattársam azt mondta, hogy "Csináljunk egy weboldalt PPT helyett" és én azt mondtam "Miért ne?".</h3>
-        <p>Jelenleg középiskolában tanulok</p>
+        <p onclick="boom()">Jelenleg középiskolában tanulok</p>
         <section>
             <h2>Néhány munkám</h2>
             <ul>
@@ -130,7 +130,9 @@
             <input value="0" onclick="toggleOutline(outlineCheckbox)" type="checkbox" id="outlineCheckbox"><label
                 for="outlineCheckbox"> Mutatás</label>
         </form>
+
     </dir>
+    <div id="boom"></div>
 </body>
 
 </html>
