github and discord hover thing

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <h1 id="name">Peti <h1 id="name2"></h1>
                 </h1>
                 <h2>Tanuló szoftverfejlesztő és tesztelő</h2>
-                <a class="small" href="https://github.com/PetiDev/" target="_blank"><img src="./img/github.svg"
+                <a class="small" github href="https://github.com/PetiDev/" target="_blank"><img src="./img/github.svg"
                         alt="github"></a>
-                <a class="small" href="https://discord.com/users/423093436313501696" target="_blank"><img
+                <a discord class="small" href="javascript:navigator.clipboard.writeText('@<Peti/>#1182')"><img
                         src="./img/discord.svg" alt="discord"></a>
             </div>
 
