--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello there</title>
+    <link rel="shortcut icon" href="img/minimal-profile.svg" type="image/x-icon">
+    <title>PetiDev</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
