--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 <body>
     <main>
-        <section class="section name">
+        <div class="name">
             <section>
-
                 <h1 id="name" class="text-primary">P3T1</h1>
                 <h1 class="text-outline">Student</h1>
                 <h1 class="text-outline">Software</h1>
@@ -25,10 +24,10 @@
             <section>
                 <img src="img/newLogoA.svg" alt="Profilkép" title="Profilkép">
             </section>
-        </section>
-        <section class="section link">
+        </div>
+        <div class="link">
             <h1>Linkek</h1>
-            <div class="link-wrapper">
+            <dir>
                 <section>
                     <h2>Elérhetőségek</h2>
                     <ul>
@@ -41,24 +40,26 @@
                 <section>
                     <h2>Oldalak</h2><sup>nagyrésze tanulásnak készült</sup>
                     <ul>
-                        <li><a href="https://petidev.github.io/PetiDevSite/snake" target="_blank">Snake</a></li>
+                        <li><a href="https://petidev.github.io/jobbSnakeWeb/" target="_blank">Snake</a></li>
                         <li><a href="https://petidev.github.io/tictactoe" target="_blank">TicTacToe</a></li>
                         <li><a href="https://petidev.github.io/PetiDevSite/dvd" target="_blank">DVD</a></li>
                         <li><a href="https://petidev.github.io/pong/" target="_blank">Pong</a></li>
                     </ul>
                 </section>
-            </div>
-        </section>
-        <section class="section prglang">
+            </dir>
+        </div>
+        <div class="prglang">
             <h1>Nyelvek</h1>
             <section class="scroll-x">
                 <img src="img/html.svg" alt="HTML" title="HTML" loading="lazy">
                 <img src="img/css.svg" alt="CSS" title="CSS" loading="lazy">
                 <img src="img/javascript.svg" alt="JavaScript" title="JavaScript" loading="lazy">
                 <img src="img/vue.svg" alt="VUE" title="VUE" loading="lazy">
+                <img src="img/Go-Logo_Aqua.svg" alt="golang" title="golang" loading="lazy">
+                <img src="img/nodejs.svg" alt="NODE.js" title="NODE.js" loading="lazy">
+                <img src="img/python-seeklogo.com.svg" alt="python" title="python" loading="lazy">
             </section>
-        </section>
-
+        </div>
     </main>
 </body>
 
